Finalizando lógica e adicionando stats

--- a/cenario1LRU_config.json
+++ b/cenario1LRU_config.json
@@ -7,7 +7,7 @@
     "UserRequestRate" : 1,
     "ContentSize" : 3,
     "Caches" : [
-        ["fifo", 2],
-        ["fifo", 2]
+        ["lru", 2],
+        ["lru", 2]
     ]
 }
